fix(bootstrap4-theme): Fixed banner heading spacing
Added margins taround banner header on mobile to better reflect Web Standards 2.0

--- a/packages/bootstrap4-theme/src/scss/extends/_banners.scss
+++ b/packages/bootstrap4-theme/src/scss/extends/_banners.scss
@@ -102,6 +102,8 @@
     flex-direction: column;
     .banner-icon {
       text-align: left;
+      margin-bottom: $uds-size-spacing-1;
+
       svg {
         font-size: $uds-size-spacing-5;
         margin: $uds-size-spacing-0;
@@ -109,6 +111,10 @@
     }
     .banner-content {
       margin-bottom: $uds-size-spacing-2;
+
+      h3 {
+        margin-bottom: $uds-size-spacing-2;
+      }
     }
     .banner-close {
       position: absolute;
